fix links on faq and fix scrollbar

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -99,7 +99,7 @@ h1, h2, h3, h4, h5, h6 {
 
   /* Chrome, Edge, and Safari */
   *::-webkit-scrollbar {
-    width: 2px;
+    width: 8px;
   }
 
   *::-webkit-scrollbar-track {
@@ -108,6 +108,6 @@ h1, h2, h3, h4, h5, h6 {
 
   *::-webkit-scrollbar-thumb {
     background-color: #d9d9d9;
-    border-radius: 0px;
+    border-radius: 5px;
     border: 0px none #ffffff;
   }
